<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navFilmes"
        android:icon="@drawable/ic_filmes"
        android:title="@string/nav_filmes" />

    <item
        android:id="@+id/navCinemas"
        android:icon="@drawable/ic_cinemas"
        android:title="@string/nav_cinemas" />

    <item
        android:id="@+id/navCompras"
        android:icon="@drawable/ic_compras"
        android:title="@string/nav_compras"
        android:visible="false" />

    <item
        android:id="@+id/navPerfil"
        android:icon="@drawable/ic_perfil"
        android:title="@string/nav_perfil"
        android:visible="false" />

    <item
        android:id="@+id/navConfiguracoes"
        android:icon="@drawable/ic_configuracoes"
        android:title="@string/nav_configuracoes"
        android:visible="false" />


    <item
        android:id="@+id/navEntrar"
        android:icon="@drawable/ic_entrar"
        android:title="@string/nav_entrar"
        android:visible="false" />

</menu>