<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/VerticalLayout.Full"
    tools:context=".activities.SignupActivity">

    <!-- Toolbar -->
    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <!-- Main Content -->
    <LinearLayout style="@style/Container.Main">

        <!-- Título -->
        <TextView android:text="@string/title_editar_perfil" style="@style/Title" />

        <!-- Subtítulo -->
        <TextView android:text="@string/subtitle_editar_perfil" style="@style/Subtitle" />

        <!-- Form -->
        <include android:id="@+id/form" layout="@layout/layout_user_form" />

        <!-- Guardar -->
        <Button android:id="@+id/btnGuardar" android:text="@string/btn_guardar" style="@style/Button.Primary.Full" />

        <!-- Cancelar -->
        <Button android:id="@+id/btnCancelar" android:text="@string/btn_cancelar" style="@style/Button.Text" />

    </LinearLayout>

</LinearLayout>
