<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navFilmes">

    <fragment
        android:id="@+id/navFilmes"
        android:name="pt.ipleiria.estg.dei.amsi.cinelive.FilmesFragment"
        android:label="@string/nav_filmes" />

    <fragment
        android:id="@+id/navCinemas"
        android:name="pt.ipleiria.estg.dei.amsi.cinelive.CinemasFragment"
        android:label="@string/nav_cinemas" />

    <fragment
        android:id="@+id/navBilhetes"
        android:name="pt.ipleiria.estg.dei.amsi.cinelive.BilhetesFragment"
        android:label="@string/nav_bilhetes" />

    <fragment
        android:id="@+id/navPerfil"
        android:name="pt.ipleiria.estg.dei.amsi.cinelive.PerfilFragment"
        android:label="@string/nav_perfil" />

</navigation>
