<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/VerticalLayout"
    android:layout_marginBottom="@dimen/list_item_margin_bottom">

    <LinearLayout style="@style/HorizontalLayout.Full" android:baselineAligned="false">

        <LinearLayout android:layout_weight="2" style="@style/VerticalLayout">

            <!-- Título do filme -->
            <TextView
                android:id="@+id/tvTituloFilme"
                style="@style/Text.Bold" />

            <!-- Nome do cinema -->
            <TextView
                android:id="@+id/tvNomeCinema"
                style="@style/Text.Small" />

            <Space style="@style/VerticalSpace.16" />

            <TextView android:text="@string/label_sessao" style="@style/Label" />
            <LinearLayout style="@style/HorizontalLayout">

                <!-- Data da sessão -->
                <TextView android:id="@+id/tvDataSessao" style="@style/Text" />

                <TextView style="@style/Text" android:text="@string/dash_divider" />

                <!-- Hora de início da sessão -->
                <TextView android:id="@+id/tvHoraInicioSessao" style="@style/Text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout android:layout_weight="3" style="@style/VerticalLayout">

            <!-- Data da compra -->
            <TextView android:id="@+id/tvDataCompra" style="@style/Text.Bold" android:textAlignment="textEnd" />

            <!-- Total -->
            <TextView android:id="@+id/tvTotal"
                style="@style/Text"
                android:textSize="@dimen/text_size_regular"
                android:textAlignment="textEnd" />

            <Space style="@style/VerticalSpace.16" />

            <!-- Lugares -->
            <TextView android:text="@string/label_lugares" style="@style/Label" android:textAlignment="textEnd" />
            <TextView android:id="@+id/tvLugares" style="@style/Text" android:textAlignment="textEnd" />

        </LinearLayout>

    </LinearLayout>

    <Space style="@style/VerticalSpace.12" />

    <!-- Botão Detalhes -->
    <Button android:id="@+id/btnDetalhes"
        style="@style/Button.Secondary"
        android:layout_width="match_parent"
        android:text="@string/btn_detalhes" />

</LinearLayout>