<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:orientation="vertical">

    <LinearLayout style="@style/HorizontalLayout.Full">

        <!-- Lugar -->
        <LinearLayout android:layout_weight="1" style="@style/VerticalLayout">

            <TextView android:text="@string/label_lugar" style="@style/Label" />
            <TextView
                android:id="@+id/tvLugar"
                style="@style/Text" />

        </LinearLayout>

        <!-- Preço -->
        <LinearLayout android:layout_weight="1" style="@style/VerticalLayout">

            <TextView
                android:text="@string/label_preco"
                style="@style/Label"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvPreco"
                style="@style/Text"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- Estado -->
        <LinearLayout android:layout_weight="1" style="@style/VerticalLayout">

            <TextView
                android:text="@string/label_estado"
                style="@style/Label"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tvEstado"
                style="@style/Text"
                android:textAlignment="textEnd" />
        </LinearLayout>

    </LinearLayout>

    <Space style="@style/VerticalSpace.4" />

    <LinearLayout
        style="@style/VerticalLayout"
        android:paddingVertical="16dp"
        android:background="@drawable/codigo_bg_shape">

        <!-- Código -->
        <TextView
            android:id="@+id/tvCodigo"
            style="@style/Title.Bold"
            android:layout_width="match_parent"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>
