<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/VerticalLayout.Full"
    tools:context=".fragments.PerfilFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh" style="@style/VerticalLayout.Full">

        <ViewFlipper android:id="@+id/mainFlipper" style="@style/VerticalLayout.Full">

            <!-- Main Loading -->
            <include layout="@layout/layout_loading" />

            <!-- Main Error -->
            <include android:id="@+id/mainError" layout="@layout/layout_error" />

            <!-- Main Content -->
            <LinearLayout style="@style/Container.Main">

                <TextView
                    style="@style/Title"
                    android:text="@string/perfil_titulo"/>

                <Space style="@style/VerticalSpace.32" />

                <!-- Form Utilizador -->
                <include android:id="@+id/form" layout="@layout/layout_form_utilizador" />

                <LinearLayout style="@style/HorizontalLayout.Full" >

                    <!-- Botão Editar Perfil -->
                    <Button style="@style/Button.Primary.Full"
                        android:id="@+id/btnEditarPerfil"
                        android:layout_weight="1"
                        android:text="@string/btn_editar_perfil" />

                    <Space android:layout_width="6dp" android:layout_height="match_parent" />

                    <!-- Botão Logout -->
                    <Button style="@style/Button.Secondary.Full"
                        android:id="@+id/btnLogout"
                        android:layout_weight="1"
                        android:text="@string/btn_logout" />

                </LinearLayout>

                <!-- Botão Eliminar Conta -->
                <Button style="@style/Button.Text"
                    android:id="@+id/btnEliminarConta"
                    android:textColor="?attr/colorError"
                    android:layout_marginTop="8dp"
                    android:text="@string/btn_eliminar_conta" />

            </LinearLayout>

        </ViewFlipper>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>