<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetalhesFilmeActivity">

    <!-- Toolbar -->
    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <!-- Dados do Filme -->
    <LinearLayout style="@style/Container.Main">

        <LinearLayout style="@style/HorizontalLayout.Full">

            <!-- Poster -->
            <ImageView
                android:id="@+id/ivPoster"
                style="@style/MoviePoster"
                android:layout_width="56dp"
                android:layout_height="wrap_content" />

            <Space style="@style/HorizontalSpace.12" />

            <LinearLayout style="@style/VerticalLayout">

                <LinearLayout
                    style="@style/HorizontalLayout.Full"
                    android:gravity="center_vertical">

                    <!-- Título -->
                    <TextView
                        android:id="@+id/tvTitulo"
                        style="@style/Title.Bold" />

                    <Space style="@style/HorizontalSpace.8" />

                    <!-- Rating -->
                    <LinearLayout style="@style/PillContainer">
                        <TextView
                            android:id="@+id/tvRating"
                            style="@style/PillText" />
                    </LinearLayout>

                </LinearLayout>

                <!-- Géneros -->
                <TextView
                    android:id="@+id/tvGeneros"
                    style="@style/Text.Small" />

            </LinearLayout>

        </LinearLayout>

        <Space style="@style/VerticalSpace.24" />

        <LinearLayout style="@style/HorizontalLayout.Full">

            <LinearLayout
                android:layout_weight="1"
                style="@style/VerticalLayout">

                <!-- Estreia -->
                <TextView style="@style/Label" android:text="@string/label_estreia" />
                <TextView
                    android:id="@+id/tvEstreia"
                    style="@style/Text" />

                <Space style="@style/VerticalSpace.16" />

                <!-- Idioma -->
                <TextView style="@style/Label" android:text="@string/label_idioma" />
                <TextView
                    android:id="@+id/tvIdioma"
                    style="@style/Text" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                style="@style/VerticalLayout">

                <!-- Estreia -->
                <TextView style="@style/Label" android:text="@string/label_duracao" />
                <TextView
                    android:id="@+id/tvDuracao"
                    style="@style/Text" />

                <Space style="@style/VerticalSpace.16" />

                <!-- Realização -->
                <TextView style="@style/Label" android:text="@string/label_realizacao" />
                <TextView
                    android:id="@+id/tvRealizacao"
                    style="@style/Text" />

            </LinearLayout>

        </LinearLayout>

        <Space style="@style/VerticalSpace.24" />

        <!-- Sinopse -->
        <TextView style="@style/Label.Large" android:text="@string/label_sinopse"/>

        <Space style="@style/VerticalSpace.4" />

        <TextView
            android:id="@+id/tvSinopse"
            style="@style/Text"
            android:layout_width="match_parent" />

        <Space style="@style/VerticalSpace.24" />

        <!-- Trailer -->
        <TextView style="@style/Label.Large" android:text="@string/label_sinopse"/>

        <Space style="@style/VerticalSpace.4" />


    </LinearLayout>

    <View style="@style/Divider" />

    <!-- Comprar Bilhetes -->
    <LinearLayout style="@style/Container.Main">

        <TextView
            style="@style/Title.Bold"
            android:textSize="28sp"
            android:layout_width="match_parent"
            android:text="@string/comprar_bilhetes"/>

        <Space style="@style/VerticalSpace.20" />

        <!-- Escolher Data da Sessão -->

        <Spinner
            android:id="@+id/spinnerData"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            style="@style/Divider"
            android:layout_marginVertical="10dp"/>

        <!-- Escolher Hora da Sessão -->
        <ListView
            android:id="@+id/lvHoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space style="@style/VerticalSpace.8" />

    </LinearLayout>

</LinearLayout>